--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <p class="modal__title">Возникли вопросы?</p>
             <p class="modal__sub-title">Задайте вопрос и оставьте ваши контакты.<br>Мы ответим вам в ближайшее время!</p>
           </div>
-          <form class="form" action="/php/form.php" method="post">
+          <form class="form" action="php/form.php" method="post">
             <div class="form-group">
               <input class="form-control" maxlength="100" name="email" placeholder="EMAIL*" type="email" required="">
             </div>
@@ -717,7 +717,7 @@
             <!-- offline form-->
             <div class="content-tab is-show fade">
               <p>В стоимость входит участие, питание и нетворкинг со спикерами</p>
-              <form class="form-registration-offline" id="formOffline" action="/php/form-data-offline.php" method="post">
+              <form class="form-registration-offline" id="formOffline" action="php/form-data-offline.php" method="post">
                 <div class="form-group">
                   <label>ИМЯ*</label>
                   <input class="form-control" maxlength="50" name="name" type="text" required="">
@@ -794,7 +794,7 @@
             <!-- online form-->
             <div class="content-tab fade">
               <p>Доступ к online трансляции тренинга</p>
-              <form class="form-registration-online" id="formOnline" action="/php/form-data-online.php" method="post" name="myform">
+              <form class="form-registration-online" id="formOnline" action="php/form-data-online.php" method="post" name="myform">
                 <div class="form-group">
                   <label>ИМЯ*</label>
                   <input class="form-control" maxlength="50" name="name" type="text" required="">
