--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                   <label>Введите целое число*</label>
                   <input class="form-control" maxlength="3" name="selectQuantity" type="number" min="1" max="100">
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <input id="allDaysOffline" type="radio" name="alldays" checked="" value="да">
                   <label class="radio js-checkbox-hideOffline" for="allDaysOffline">Курс (4 дня)</label>
                 </div>
@@ -780,7 +780,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="form__btns">
                   <button class="btn" type="submit">Отправить заявку</button>
                   <!--a.btn(href='') Оплатить-->
@@ -826,7 +826,7 @@
                   <label>Введите целое число*</label>
                   <input class="form-control" maxlength="3" name="selectQuantity" type="number" min="1" max="100">
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <input id="allDays" type="radio" name="alldays" checked="" value="да">
                   <label class="radio js-checkbox-hide" for="allDays">Курс (4 дня)</label>
                 </div>
@@ -857,7 +857,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
                 <div class="form__btns">
                   <button class="btn" type="submit">Отправить заявку</button>
                   <!--a.btn(href='') Оплатить-->
@@ -909,71 +909,6 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="col-sm-2">
-              <div class="reader__box"><img src="img/polishuk.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Полищук Олег</p>
-                  <p class="reader__box-desc">Советник президента <br>НАЭК «Энергоатом»</p>
-                  <div class="reader__box-read"><a id="polishuk" href="">Читать о лекторе</a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="reader__box"><img src="img/melaschenko.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Юрий Мелащенко</p>
-                  <p class="reader__box-desc">Специалист по кибербезопасности, соучредитель Security Services Group</p>
-                  <div class="reader__box-read"><a id="melaschenko" href="">Читать о лекторе</a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="reader__box"><img src="img/krasuk.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Евгений Красюк</p>
-                  <p class="reader__box-desc">Руководитель проекта HR-SECURITY</p>
-                  <div class="reader__box-read"><a id="krasuk" href="">Читать о лекторе</a></div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="reader__box"><img src="img/maceluh.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Виталий Мацелюх</p>
-                  <p class="reader__box-desc">Управляющий партнер АО «Артиус», партнер Холдинга охранных предприятий «Шериф»</p>
-                  <div class="reader__box-read"><a id="maceluh" href="">Читать о лекторе</a></div>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="col-sm-2">
-              <div class="reader__box"><img src="img/kruglova.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Ольга Круглова</p>
-                  <p class="reader__box-desc">Руководитель направления нелинейной юриспруденции<br>в Underdog The Unlawyers</p>
-                  <div class="reader__box-read"> -->
-                    <!--a#matata(href='') Читать о лекторе-->
-                  <!-- </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-2">
-              <div class="reader__box"><img src="img/kosovan.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Анатолий Косован</p>
-                  <p class="reader__box-desc">Управляющий партнёр ЮФ Kosovan Legal Group</p>
-                  <div class="reader__box-read"><a id="kosovan" href="">Читать о лекторе</a></div>
-                </div>
-              </div>
-            </div> -->
-            <!-- <div class="col-sm-2">
-              <div class="reader__box"><img src="img/borovyk.png" alt="" data-aos="fade-right-custom">
-                <div class="reader__box-header" data-aos="fade-left-custom">
-                  <p class="reader__box-title">Максим Боровик</p>
-                  <p class="reader__box-desc">Эксперт по обучению и развитию в Youcontrol.com.ua</p>
-                  <div class="reader__box-read"><a id="borovyk" href="">Читать о лекторе</a></div>
-                </div>
-              </div>
-            </div> -->
           </div>
         </div>
       </section>
